[ci skip] Updates

--- a/classes/licenseclient.html
+++ b/classes/licenseclient.html
@@ -115,13 +115,23 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/client.ts#L6">client.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L6">client.ts:6</a></li>
 								</ul>
 							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>Creating a License Client</p>
+								</div>
+							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>license: <span class="tsd-signature-type">Contract</span></h5>
+									<div class="tsd-comment tsd-typography">
+										<div class="lead">
+											<p>License Contract</p>
+										</div>
+									</div>
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <a href="licenseclient.html" class="tsd-signature-type">LicenseClient</a></h4>
@@ -137,9 +147,14 @@
 					<div class="tsd-signature tsd-kind-icon">license<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Contract</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/client.ts#L7">client.ts:7</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L12">client.ts:12</a></li>
 						</ul>
 					</aside>
+					<div class="tsd-comment tsd-typography">
+						<div class="lead">
+							<p>License Contract</p>
+						</div>
+					</div>
 				</section>
 			</section>
 			<section class="tsd-panel-group tsd-member-group ">
@@ -154,7 +169,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/client.ts#L128">client.ts:128</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L140">client.ts:140</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -172,7 +187,9 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span></h4>
-							<p>Boolean value to indicate if supply is present or not</p>
+							<ul>
+								<li>Value to indicate if supply is present or not</li>
+							</ul>
 						</li>
 					</ul>
 				</section>
@@ -186,7 +203,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/client.ts#L95">client.ts:95</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L107">client.ts:107</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -210,7 +227,9 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>hasLicense<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span>signature<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></h4>
-							<p>Object containing boolean hasLicense and signature of signed message</p>
+							<blockquote>
+								<p>} Object containing boolean hasLicense and signature of signed message</p>
+							</blockquote>
 						</li>
 					</ul>
 				</section>
@@ -224,7 +243,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/client.ts#L117">client.ts:117</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L129">client.ts:129</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -248,7 +267,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">&gt;</span></h4>
-							<p>Boolean value to indicate if license is present or not</p>
+							<p>Value to indicate if license is present or not</p>
 						</li>
 					</ul>
 				</section>
@@ -262,13 +281,24 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/client.ts#L16">client.ts:16</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L25">client.ts:25</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Purchase the License of Project for the recipient with Native coin</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>throws</dt>
+									<dd><p>{Error} if signer is not present</p>
+									</dd>
+									<dt>throws</dt>
+									<dd><p>{Error} if product license supply is not available</p>
+									</dd>
+									<dt>throws</dt>
+									<dd><p>{Error} if signer has insufficient balance to purchase license</p>
+									</dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -286,7 +316,9 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-type">ContractTransaction</span><span class="tsd-signature-symbol">&gt;</span></h4>
-							<p>Contract transaction</p>
+							<ul>
+								<li>Contract transaction</li>
+							</ul>
 						</li>
 					</ul>
 				</section>
@@ -300,20 +332,31 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/client.ts#L46">client.ts:46</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L58">client.ts:58</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Purchase the License of Project for the recipient with ERC20 tokens</p>
+									<p>Purchase the License of Project for the recipient with supported ERC20 tokens</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>throws</dt>
+									<dd><p>{Error} if signer is not present</p>
+									</dd>
+									<dt>throws</dt>
+									<dd><p>{Error} if product license supply is not available</p>
+									</dd>
+									<dt>throws</dt>
+									<dd><p>{Error} if token balance is insufficient to purchase license</p>
+									</dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
 								<li>
 									<h5>token: <span class="tsd-signature-type">string</span></h5>
 									<div class="tsd-comment tsd-typography">
-										<p>ERC20 token address to purchase License with</p>
+										<p>Supported ERC20 token address to purchase License with</p>
 									</div>
 								</li>
 								<li>
