--- a/globals.html
+++ b/globals.html
@@ -114,7 +114,7 @@
 					<div class="tsd-signature tsd-kind-icon">Provider<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">JsonRpcProvider</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Web3Provider</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/index.ts#L13">index.ts:13</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/index.ts#L13">index.ts:13</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -124,7 +124,7 @@
 					<div class="tsd-signature tsd-kind-icon">Signer<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">JsonRpcSigner</span><span class="tsd-signature-symbol"> | </span><span class="tsd-signature-type">Wallet</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/index.ts#L11">index.ts:11</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/index.ts#L11">index.ts:11</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -137,7 +137,7 @@
 					<div class="tsd-signature tsd-kind-icon">erc20ABI<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [&#x27;function approve(address spender, uint256 amount) returns (bool)&#x27;,&#x27;function balanceOf(address account) view returns (uint256)&#x27;,&#x27;function allowance(address owner, address spender) view returns (uint256)&#x27;,]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/contracts.ts#L12">contracts.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/contracts.ts#L12">contracts.ts:12</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -147,7 +147,7 @@
 					<div class="tsd-signature tsd-kind-icon">licenseABI<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [&#x27;function purchase(uint256 _projectID, address _recipient) payable&#x27;,&#x27;function purchase(address _token, uint256 _projectID, address _recipient) payable&#x27;,&#x27;function balanceOf(address account, uint256 id) view returns (uint256)&#x27;,&#x27;function getPrice(uint256 _projectID) view returns (uint256)&#x27;,&#x27;function getPrice(address _token, uint256 _projectID) view returns (uint256)&#x27;,&#x27;function getSupply(uint256 _projectID) view returns (uint256)&#x27;,&#x27;function getLimit(uint256 _projectID) view returns (uint256)&#x27;,]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/contracts.ts#L1">contracts.ts:1</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/contracts.ts#L1">contracts.ts:1</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -157,7 +157,7 @@
 					<div class="tsd-signature tsd-kind-icon">license<wbr>Contract<wbr>Address<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"0x3cE643dc61bb40bB0557316539f4A93016051b81"</span><span class="tsd-signature-symbol"> = &quot;0x3cE643dc61bb40bB0557316539f4A93016051b81&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/contracts.ts#L26">contracts.ts:26</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/contracts.ts#L26">contracts.ts:26</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -167,7 +167,7 @@
 					<div class="tsd-signature tsd-kind-icon">multi<wbr>CallABI<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [&#x27;function aggregate(tuple(address target, bytes callData)[] calls) returns (uint256 blockNumber, bytes[] returnData)&#x27;,]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/contracts.ts#L19">contracts.ts:19</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/contracts.ts#L19">contracts.ts:19</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -177,7 +177,7 @@
 					<div class="tsd-signature tsd-kind-icon">multi<wbr>Call<wbr>Contract<wbr>Address<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">"0xcA11bde05977b3631167028862bE2a173976CA11"</span><span class="tsd-signature-symbol"> = &quot;0xcA11bde05977b3631167028862bE2a173976CA11&quot;</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/contracts.ts#L23">contracts.ts:23</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/contracts.ts#L23">contracts.ts:23</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -187,7 +187,7 @@
 					<div class="tsd-signature tsd-kind-icon">supported<wbr>Chain<wbr>Ids<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span><span class="tsd-signature-symbol">[]</span><span class="tsd-signature-symbol"> = [137, 80001]</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/contracts.ts#L30">contracts.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/contracts.ts#L30">contracts.ts:30</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -204,13 +204,21 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/b6f54e4/packages/sdk/src/index.ts#L30">index.ts:30</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/index.ts#L32">index.ts:32</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
-									<p>Create a Valist License client using the given provider.</p>
+									<p>Create a Valist License client using the given provider/signer.</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>throws</dt>
+									<dd><p>{Error} if chainId couldn&#39;t be determined automatically when chainId is not passed in options</p>
+									</dd>
+									<dt>throws</dt>
+									<dd><p>{Error} if unsupported chainId is present</p>
+									</dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -225,7 +233,7 @@
 								</li>
 							</ul>
 							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><a href="classes/licenseclient.html" class="tsd-signature-type">LicenseClient</a><span class="tsd-signature-symbol">&gt;</span></h4>
-							<p>instance of LicenseClient</p>
+							<p>Instance of LicenseClient</p>
 						</li>
 					</ul>
 				</section>
