--- a/classes/licenseclient.html
+++ b/classes/licenseclient.html
@@ -95,6 +95,7 @@
 							<ul class="tsd-index-list">
 								<li class="tsd-kind-method tsd-parent-kind-class tsd-is-private"><a href="licenseclient.html#_issupplyavailable" class="tsd-kind-icon">#is<wbr>Supply<wbr>Available</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#checklicense" class="tsd-kind-icon">check<wbr>License</a></li>
+								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#generatenonce" class="tsd-kind-icon">generate<wbr>Nonce</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#haslicense" class="tsd-kind-icon">has<wbr>License</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#purchaseproduct" class="tsd-kind-icon">purchase<wbr>Product</a></li>
 								<li class="tsd-kind-method tsd-parent-kind-class"><a href="licenseclient.html#purchaseproducttoken" class="tsd-kind-icon">purchase<wbr>Product<wbr>Token</a></li>
@@ -115,7 +116,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L6">client.ts:6</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L7">client.ts:7</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -147,7 +148,7 @@
 					<div class="tsd-signature tsd-kind-icon">license<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">Contract</span></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L12">client.ts:12</a></li>
+							<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L13">client.ts:13</a></li>
 						</ul>
 					</aside>
 					<div class="tsd-comment tsd-typography">
@@ -169,7 +170,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L140">client.ts:140</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L170">client.ts:170</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -197,19 +198,24 @@
 					<a name="checklicense" class="tsd-anchor"></a>
 					<h3>check<wbr>License</h3>
 					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
-						<li class="tsd-signature tsd-kind-icon">check<wbr>License<span class="tsd-signature-symbol">(</span>projectID<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BigNumberish</span>, signingMessage<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>hasLicense<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span>signature<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></li>
+						<li class="tsd-signature tsd-kind-icon">check<wbr>License<span class="tsd-signature-symbol">(</span>projectID<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">BigNumberish</span>, signingMessage<span class="tsd-signature-symbol">?: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>hasLicense<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span>nonce<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>signature<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>signingMessage<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></li>
 					</ul>
 					<ul class="tsd-descriptions">
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L107">client.ts:107</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L109">client.ts:109</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
 								<div class="lead">
 									<p>Check if the signer has license to the Project</p>
 								</div>
+								<dl class="tsd-comment-tags">
+									<dt>throws</dt>
+									<dd><p>{Error} if the recovered address is not the singer address</p>
+									</dd>
+								</dl>
 							</div>
 							<h4 class="tsd-parameters-title">Parameters</h4>
 							<ul class="tsd-parameters">
@@ -220,16 +226,44 @@
 									</div>
 								</li>
 								<li>
-									<h5><span class="tsd-flag ts-flagDefault value">Default value</span> signingMessage: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> = &quot;Authenticate your wallet&quot;</span></h5>
+									<h5><span class="tsd-flag ts-flagOptional">Optional</span> signingMessage: <span class="tsd-signature-type">string</span></h5>
 									<div class="tsd-comment tsd-typography">
 										<p>Message to sign with the wallet</p>
 									</div>
 								</li>
 							</ul>
-							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>hasLicense<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span>signature<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></h4>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">Promise</span><span class="tsd-signature-symbol">&lt;</span><span class="tsd-signature-symbol">{ </span>hasLicense<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">boolean</span><span class="tsd-signature-symbol">; </span>nonce<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>signature<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">; </span>signingMessage<span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span><span class="tsd-signature-symbol"> }</span><span class="tsd-signature-symbol">&gt;</span></h4>
 							<blockquote>
-								<p>} Object containing boolean hasLicense and signature of signed message</p>
+								<p>} Object containing boolean hasLicense, signingMessage, nonce and signature of signed message</p>
 							</blockquote>
+						</li>
+					</ul>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-method tsd-parent-kind-class">
+					<a name="generatenonce" class="tsd-anchor"></a>
+					<h3>generate<wbr>Nonce</h3>
+					<ul class="tsd-signatures tsd-kind-method tsd-parent-kind-class">
+						<li class="tsd-signature tsd-kind-icon">generate<wbr>Nonce<span class="tsd-signature-symbol">(</span><span class="tsd-signature-symbol">)</span><span class="tsd-signature-symbol">: </span><span class="tsd-signature-type">string</span></li>
+					</ul>
+					<ul class="tsd-descriptions">
+						<li class="tsd-description">
+							<aside class="tsd-sources">
+								<ul>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L156">client.ts:156</a></li>
+								</ul>
+							</aside>
+							<div class="tsd-comment tsd-typography">
+								<div class="lead">
+									<p>This method leverages a native CSPRNG with support for both browser and Node.js
+										environments in order generate a cryptographically secure nonce for use in the
+									SiweMessage in order to prevent replay attacks.</p>
+								</div>
+								<p>96 bits has been chosen as a number to sufficiently balance size and security considerations
+								relative to the lifespan of it&#39;s usage.</p>
+							</div>
+							<h4 class="tsd-returns-title">Returns <span class="tsd-signature-type">string</span></h4>
+							<p>cryptographically generated random nonce with 96 bits of entropy encoded with
+							an alphanumeric character set.</p>
 						</li>
 					</ul>
 				</section>
@@ -243,7 +277,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L129">client.ts:129</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L140">client.ts:140</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -281,7 +315,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L25">client.ts:25</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L26">client.ts:26</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -332,7 +366,7 @@
 						<li class="tsd-description">
 							<aside class="tsd-sources">
 								<ul>
-									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/f0d376a/packages/sdk/src/client.ts#L58">client.ts:58</a></li>
+									<li>Defined in <a href="https://github.com/pawanpaudel93/valist-software-license/blob/7e09349/packages/sdk/src/client.ts#L59">client.ts:59</a></li>
 								</ul>
 							</aside>
 							<div class="tsd-comment tsd-typography">
@@ -405,6 +439,9 @@
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="licenseclient.html#checklicense" class="tsd-kind-icon">check<wbr>License</a>
+							</li>
+							<li class=" tsd-kind-method tsd-parent-kind-class">
+								<a href="licenseclient.html#generatenonce" class="tsd-kind-icon">generate<wbr>Nonce</a>
 							</li>
 							<li class=" tsd-kind-method tsd-parent-kind-class">
 								<a href="licenseclient.html#haslicense" class="tsd-kind-icon">has<wbr>License</a>
